[package]
name = "raindex_rest_api"
description = "REST API server for raindex"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "raindex-api"
path = "src/main.rs"

[dependencies]
raindex_common = { workspace = true }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { version = "5", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "9", features = ["rocket"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
alloy = { workspace = true }
