[package]
name = "rain_orderbook_app_settings"
description = "Rain Orderbook app settings parsing & validation"
version.workspace = true
edition.workspace = true
license.workspace = true
author.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { workspace = true }
url = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
strict-yaml-rust = { workspace = true }
alloy = { workspace = true, features = ["serde", "rand"] }
typeshare = { workspace = true }
reqwest = { workspace = true }
rain_orderbook_bindings = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tsify = { version = "0.4.5", default-features = false, features = ["js", "wasm-bindgen"] }
serde-wasm-bindgen = { version = "0.6.5" }
wasm-bindgen = { version = "0.2.92" }

[dev-dependencies]
tokio = { workspace = true }
httpmock = "0.7.0"
