[package]
name = "rain_orderbook_app_settings"
description = "Rain Orderbook app settings parsing & validation"
version.workspace = true
edition.workspace = true
license.workspace = true
author.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { workspace = true }
url = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
strict-yaml-rust = { workspace = true }
alloy = { workspace = true, features = ["serde", "rand"] }
reqwest = { workspace = true }
rain_orderbook_bindings = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-utils = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
httpmock = "0.7.0"
