[package]
name = "rain_orderbook_subgraph_client"
description = "Subgraph client, queries & schemas for the Rain Orderbook"
version.workspace = true
edition.workspace = true
license.workspace = true
author.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true, features = ["rand"] }
rain_orderbook_bindings = { workspace = true }
rain_orderbook_math = { workspace = true }
chrono = { workspace = true }
url = { workspace = true, features = ["serde"] }
cynic-introspection = "3.7.3"
once_cell = { workspace = true }
futures = "0.3.17"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-utils = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true, features = ["full"] }
httpmock = "0.7.0"

[build-dependencies]
cynic-codegen = { workspace = true }
