[package]
name = "rain_orderbook_test_fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true, features = ["full", "node-bindings"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
