[package]
name = "rain_orderbook_wasm_async_compile_wrapper"
description = "A Wrapper around the Rain Orderbook JS-API WASM module to support async compilation"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = { workspace = true }
wasm-bindgen-utils = { workspace = true }
