[package]
name = "tauri-app"
version = "0.0.0"
description = "Rain Orderbook Tauri App."
edition = "2021"
license = "CAL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "os-all", "window-start-dragging", "fs-write-file", "fs-read-file", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rain_orderbook_common = { path = "../../crates/common" }
rain_orderbook_subgraph_client = { path = "../../crates/subgraph" }
rain_orderbook_app_settings = { path = "../../crates/settings" }
alloy-ethers-typecast = { git = "https://github.com/rainlanguage/alloy-ethers-typecast", rev = "a6bcb86b9b61a56d2440d33313f024297ce737bb" }
alloy-primitives = "0.6.3"
alloy-json-abi = "0.6.3"
alloy-sol-types = { version = "0.6.3", features = ["json"] }
typeshare = "1.0.1"
reqwest = { version = "0.11.22", features = ["json"] }
chrono = { version = "0.4.32", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde"] }
serde_bytes = "0.11.14"
thiserror = "1.0.56"
url = "2.5.0"
serde_yaml = "0.9.32"
dotrain = "6.0.1-alpha.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tauri-cli = "1.5"
