[package]
name = "tauri-app"
version = "0.0.0"
description = "raindex"
edition = "2021"
license = "LicenseRef-DCL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# for building bindings
[lib]
crate-type = ["cdylib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde"] }
rain-erc = { git = "https://github.com/rainlanguage/rain.erc", rev = "0106e645ebd49334addc698c5aad9a85370eb54d" }
rain-metadata = { path = "../../lib/rain.interpreter/lib/rain.metadata/crates/cli" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tauri = { version = "1.5", features = [
    "os-all",
    "window-start-dragging",
    "fs-write-file",
    "fs-read-file",
    "dialog-open",
    "dialog-save",
    "shell-open",
] }
serde_json = "1.0"
rain_orderbook_common = { path = "../../crates/common" }
rain_orderbook_quote = { path = "../../crates/quote" }
rain_orderbook_subgraph_client = { path = "../../crates/subgraph" }
rain_orderbook_app_settings = { path = "../../crates/settings" }
rain_orderbook_bindings = { path = "../../crates/bindings" }
alloy-ethers-typecast = { git = "https://github.com/rainlanguage/alloy-ethers-typecast", rev = "65a68f207287d024cba934bf1e3c8b3f63d2834a" }
alloy = { version = "0.1.4", features = ["full", "node-bindings"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde_bytes = "0.11.14"
thiserror = "1.0.56"
url = "2.5.0"
serde_yaml = "0.9.32"
dotrain = "6.0.1-alpha.24"
futures = "0.3.17"
tokio = { version = "1.28.0", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-utils = "0.0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tauri-cli = "1.5"
httpmock = "0.7.0"
rain_orderbook_test_fixtures = { path = "../../crates/test_fixtures" }
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error", rev = "72d9577fdaf7135113847027ba951f9a43b41827" }
rain-interpreter-eval.path = "../../lib/rain.interpreter/crates/eval"
strict-yaml-rust = "0.1.2"
tempfile = "3.20.0"
